--- a/Script.ipynb
+++ b/Script.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "ea613412",
    "metadata": {},
    "outputs": [
@@ -280,14 +280,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# 1. Define target and features\n",
+    "#Define target and features\n",
     "y = (train['dep_delayed_15min'] == 'Y').astype(int)\n",
     "X = train.drop(columns=['dep_delayed_15min'])\n",
     "\n",
-    "# 2. Align test set columns with training set\n",
+    "# Align test set columns with training set\n",
     "test = test.reindex(columns=X.columns, fill_value=0)\n",
     "\n",
-    "# 3. Cross-validation on full training set\n",
+    "# Cross-validation on full training set\n",
     "clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "\n",
     "# ROC AUC scores from 5-fold cross-validation\n",
@@ -297,14 +297,14 @@
     "print(f\"Cross-Validation ROC AUC Scores: {cv_scores}\")\n",
     "print(f\"Mean CV ROC AUC Score: {cv_scores.mean():.4f}\")\n",
     "\n",
-    "# 4. Retrain on full data for final predictions\n",
+    "# Retrain on full data for final predictions\n",
     "clf_final = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "clf_final.fit(X, y)\n",
     "\n",
-    "# 5. Predict on test data\n",
+    "# Predict on test data\n",
     "test_probs = clf_final.predict_proba(test)[:, 1]\n",
     "\n",
-    "# 6. Prepare submission\n",
+    "# Prepare submission\n",
     "submission = pd.DataFrame({\n",
     "    'id': range(len(test)),\n",
     "    'dep_delayed_15min': test_probs\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "eda9b68d",
    "metadata": {},
    "outputs": [
@@ -333,14 +333,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# 1. Define target and features\n",
+    "# Define target and features\n",
     "y = (train['dep_delayed_15min'] == 'Y').astype(int)\n",
     "X = train.drop(columns=['dep_delayed_15min'])\n",
     "\n",
-    "# 2. Align test set columns with training set\n",
+    "# Align test set columns with training set\n",
     "test = test.reindex(columns=X.columns, fill_value=0)\n",
     "\n",
-    "# 3. Cross-validation on full training set\n",
+    "# Cross-validation on full training set\n",
     "clf = XGBClassifier(\n",
     "    n_estimators=100,\n",
     "    max_depth=6,\n",
@@ -356,13 +356,13 @@
     "print(f\"Cross-Validation ROC AUC Scores: {cv_scores}\")\n",
     "print(f\"Mean CV ROC AUC Score: {cv_scores.mean():.4f}\")\n",
     "\n",
-    "# 4. Retrain on full data for final predictions\n",
+    "# Retrain on full data for final predictions\n",
     "clf.fit(X, y)\n",
     "\n",
-    "# 5. Predict on test data\n",
+    "# Predict on test data\n",
     "test_probs = clf.predict_proba(test)[:, 1]\n",
     "\n",
-    "# 6. Prepare submission\n",
+    "# Prepare submission\n",
     "submission = pd.DataFrame({\n",
     "    'id': range(len(test)),\n",
     "    'dep_delayed_15min': test_probs\n",
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "7ddf642e",
    "metadata": {},
    "outputs": [
@@ -391,14 +391,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# 1. Define target and features\n",
+    "# Define target and features\n",
     "y = (train['dep_delayed_15min'] == 'Y').astype(int)\n",
     "X = train.drop(columns=['dep_delayed_15min'])\n",
     "\n",
-    "# 2. Align test set columns with training set\n",
+    "#Align test set columns with training set\n",
     "test = test.reindex(columns=X.columns, fill_value=0)\n",
     "\n",
-    "# 3. Cross-validation on full training set\n",
+    "# Cross-validation on full training set\n",
     "clf = lgb.LGBMClassifier(\n",
     "    n_estimators=100,\n",
     "    learning_rate=0.1,\n",
@@ -415,13 +415,13 @@
     "print(f\"Cross-Validation ROC AUC Scores: {cv_scores}\")\n",
     "print(f\"Mean CV ROC AUC Score: {cv_scores.mean():.4f}\")\n",
     "\n",
-    "# 4. Retrain on full data for final predictions\n",
+    "# Retrain on full data for final predictions\n",
     "clf.fit(X, y)\n",
     "\n",
-    "# 5. Predict on test data\n",
+    "# redict on test data\n",
     "test_probs = clf.predict_proba(test)[:, 1]\n",
     "\n",
-    "# 6. Prepare submission\n",
+    "# Prepare submission\n",
     "submission = pd.DataFrame({\n",
     "    'id': range(len(test)),\n",
     "    'dep_delayed_15min': test_probs\n",
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "0682ff4c",
    "metadata": {},
    "outputs": [
@@ -451,14 +451,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# 1. Define target and features\n",
+    "# Define target and features\n",
     "y = (train['dep_delayed_15min'] == 'Y').astype(int)\n",
     "X = train.drop(columns=['dep_delayed_15min'])\n",
     "\n",
-    "# 2. Align test set columns with training set\n",
+    "# Align test set columns with training set\n",
     "test = test.reindex(columns=X.columns, fill_value=0)\n",
     "\n",
-    "# 3. Define base learners and meta-learner\n",
+    "# Define base learners and meta-learner\n",
     "base_learners = [\n",
     "    ('rf', RandomForestClassifier(n_estimators=100, random_state=42)),\n",
     "    ('gb', GradientBoostingClassifier(n_estimators=100, random_state=42))\n",
@@ -467,20 +467,20 @@
     "\n",
     "clf = StackingClassifier(estimators=base_learners, final_estimator=meta_learner, cv=5)\n",
     "\n",
-    "# 4. Cross-validation on full training set\n",
+    "# Cross-validation on full training set\n",
     "cv_scores = cross_val_score(clf, X, y, cv=5, scoring='roc_auc')\n",
     "\n",
     "# Print scores\n",
     "print(f\"Cross-Validation ROC AUC Scores: {cv_scores}\")\n",
     "print(f\"Mean CV ROC AUC Score: {cv_scores.mean():.4f}\")\n",
     "\n",
-    "# 5. Retrain on full data for final predictions\n",
+    "# Retrain on full data for final predictions\n",
     "clf.fit(X, y)\n",
     "\n",
-    "# 6. Predict on test data\n",
+    "# Predict on test data\n",
     "test_probs = clf.predict_proba(test)[:, 1]\n",
     "\n",
-    "# 7. Prepare submission\n",
+    "# Prepare submission\n",
     "submission = pd.DataFrame({\n",
     "    'id': range(len(test)),\n",
     "    'dep_delayed_15min': test_probs\n",
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "af7db3bf",
    "metadata": {},
    "outputs": [
@@ -509,14 +509,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# 1. Define target and features\n",
+    "# Define target and features\n",
     "y = (train['dep_delayed_15min'] == 'Y').astype(int)\n",
     "X = train.drop(columns=['dep_delayed_15min'])\n",
     "\n",
-    "# 2. Align test set columns with training set\n",
+    "# Align test set columns with training set\n",
     "test = test.reindex(columns=X.columns, fill_value=0)\n",
     "\n",
-    "# 3. CatBoost \n",
+    "# CatBoost \n",
     "clf = CatBoostClassifier(\n",
     "    iterations=100,\n",
     "    learning_rate=0.1,\n",
@@ -525,20 +525,20 @@
     "    verbose=0\n",
     ")\n",
     "\n",
-    "# 4. Cross-validation on full training set\n",
+    "# Cross-validation on full training set\n",
     "cv_scores = cross_val_score(clf, X, y, cv=5, scoring='roc_auc')\n",
     "\n",
     "# Print CV results\n",
     "print(f\"Cross-Validation ROC AUC Scores: {cv_scores}\")\n",
     "print(f\"Mean CV ROC AUC Score: {cv_scores.mean():.4f}\")\n",
     "\n",
-    "# 5. Retrain on full data for final predictions\n",
+    "# Retrain on full data for final predictions\n",
     "clf.fit(X, y)\n",
     "\n",
-    "# 6. Predict on test data\n",
+    "# Predict on test data\n",
     "test_probs = clf.predict_proba(test)[:, 1]\n",
     "\n",
-    "# 7. Prepare submission\n",
+    "# Prepare submission\n",
     "submission = pd.DataFrame({\n",
     "    'id': range(len(test)),\n",
     "    'dep_delayed_15min': test_probs\n",
